Refactored locales for course_groups

--- a/core/app/views/gaku/course_groups/_course_groups.html.slim
+++ b/core/app/views/gaku/course_groups/_course_groups.html.slim
@@ -2,7 +2,7 @@
 table#course-groups-index.index.table.table-striped.table-bordered.table-condensed
 	thead
 	  tr
-	    th.btn-inverse = sortable 'name',  t('name')
+	    th.btn-inverse = sortable 'name',  t('course_group.name')
 	    th.btn-info style="width:94px" = t('manage')
 	tbody
 	  =render :partial => 'course_group', :collection => @course_groups, :as => :course_group
