--- a/core/app/views/gaku/shared/menu/_global.html.erb
+++ b/core/app/views/gaku/shared/menu/_global.html.erb
@@ -20,7 +20,7 @@
     <ul class="dropdown-menu">
       <li data-hook="syllabuses"><%= link_to t("syllabus.plural"), syllabuses_path %></li>
       <li data-hook="courses"><%= link_to t("course.plural"), courses_path %></li>
-      <li data-hook="course_groups"><%= link_to t('course_groups.course_groups'), course_groups_path %></li>
+      <li data-hook="course_groups"><%= link_to t('course_group.plural'), course_groups_path %></li>
     </ul>
   </li>
 
