--- a/core/app/views/gaku/course_groups/course_group_enrollments/_courses.html.slim
+++ b/core/app/views/gaku/course_groups/course_group_enrollments/_courses.html.slim
@@ -1,17 +1,17 @@
 #new-course-group-enrollment
 .pull-left
   h4.h4-vm.course-group-enrollments-count
-   = print_count(@course_group.course_group_enrollments.count, t("courses.list"))
+   = print_count(@course_group.course_group_enrollments.count, t_course_list)
 .pull-right
-  = ajax_link_to_new t('course_groups.add_course'), new_course_group_course_group_enrollment_path(@course_group), :id =>'new-course-group-enrollment-link'
+  = ajax_link_to_new t('course.add'), new_course_group_course_group_enrollment_path(@course_group), :id =>'new-course-group-enrollment-link'
 table#course-group-enrollments-index.index.table.table-striped.table-bordered.table-condensed
 	thead
 		tr
-			th =t('name')
-			th =t('syllabus')
-			th =t('manage')
+			th = t('course.name')
+			th = t('syllabus.singular')
+			th = t('manage')
 	tbody
-		- course_group.course_group_enrollments.each do |course_group_enrollment|				
+		- course_group.course_group_enrollments.each do |course_group_enrollment|
 			tr
 				td =course_group_enrollment.course.code
 				td =course_group_enrollment.course.syllabus.name if course_group_enrollment.course.syllabus
