--- a/core/app/views/gaku/course_groups/course_group_enrollments/destroy.js.erb
+++ b/core/app/views/gaku/course_groups/course_group_enrollments/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.course-group-enrollments-count').html('<%= print_count(@course_group.courses.count, t("courses.list")) %>');
+$('.course-group-enrollments-count').html('<%= print_count(@count-1, t_course_list) %>');
