--- a/core/app/views/gaku/course_groups/create.js.erb
+++ b/core/app/views/gaku/course_groups/create.js.erb
@@ -3,7 +3,7 @@
 <% else %>
 	$('#course-groups-index tbody').append('<%= render_js_partial("course_group", {:course_group => @course_group}) %>');
 	showNotice("<%= render_flash %>");
-	$('.course-groups-count').html('<%= print_count(@course_groups_count + 1, t("course_groups.list")) %>');
+	$('.course-groups-count').html('<%= print_count(@count+1, t_course_group_list) %>');
 	$('#new-course-group').slideToggle()
 	$('#new-course-group-link').show()
 	$('#new-course-group form')[0].reset();
