--- a/core/app/views/gaku/course_groups/index.html.slim
+++ b/core/app/views/gaku/course_groups/index.html.slim
@@ -2,11 +2,11 @@
   .span1
   .span10
     .row-fluid
-      .pull-left 
+      .pull-left
         h4.h4-vm.course-groups-count
-          = print_count(@course_groups.count, t('course_groups.list'))
+          = print_count(@count, t('course_group.list'))
       .pull-right
-        = ajax_link_to_new t("course_groups.new"), new_course_group_path, :id => "new-course-group-link"
+        = ajax_link_to_new t('course_group.new'), new_course_group_path, :id => "new-course-group-link"
     .row-fluid
       #course-group-form-errors
       #new-course-group.hide
@@ -17,7 +17,7 @@
         table#course-groups-index.index.table.table-striped.table-bordered.table-condensed
           thead
             tr
-              th.btn-inverse = sortable 'name',  t('name')
+              th.btn-inverse = sortable 'name',  t('course_group.name')
               th.btn-info style="width:94px" = t('manage')
           tbody
             =render :partial => 'course_group', :collection => @course_groups, :as => :course_group
