[fix] master school nil checking

--- a/core/app/views/gaku/admin/schools/index.html.slim
+++ b/core/app/views/gaku/admin/schools/index.html.slim
@@ -1,5 +1,5 @@
 #admin-schools
-  =render 'master_school', :master_school => @master_school
+  =render 'master_school', :master_school => @master_school if @master_school
   .row-fluid
     #new-admin-school.hide
     .pull-left
