Refactored locales for admin/schools

--- a/core/app/views/gaku/admin/schools/_master_school.html.slim
+++ b/core/app/views/gaku/admin/schools/_master_school.html.slim
@@ -3,29 +3,29 @@
   .span6
     table.index.table.table-striped.table-bordered.table-condensed
       tr
-        th.btn-c1  width="25%" =t('schools.master_school')
+        th.btn-c1  width="25%" = t('school.master')
         td =master_school.name if master_school
       tr
-        th.btn-c2 =t('schools.code')
+        th.btn-c2 = t('school.code')
         td =master_school.grades if master_school
       tr
-        th.btn-c2 =t('schools.campuses')
+        th.btn-c2 = t('school.campuses')
         td =master_school.campuses.count if master_school
       tr
-        th.btn-c2 =t("schools.slogan")
+        th.btn-c2 = t('school.slogan')
         td =master_school.slogan if master_school
       tr
-        th.btn-c2 =t("schools.founded")
+        th.btn-c2 = t('school.founded')
         td =master_school.founded if master_school
       tr
-        th.btn-c2 =t("schools.description")
+        th.btn-c2 = t('school.description')
         td =master_school.description if master_school
       tr
-        th.btn-c2 =t("schools.principal")
+        th.btn-c2 = t('school.principal')
         td =master_school.principal if master_school
       tr
-        th.btn-c2 =t("schools.vice_principal")
+        th.btn-c2 = t('school.vice_principal')
         td =master_school.vice_principal if master_school
       tr
-        th.btn-c2 =t("schools.grades")
+        th.btn-c2 = t('school.grades')
         td =master_school.grades if master_school
