--- a/core/app/views/gaku/admin/schools/_school_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/_school_modal.html.slim
@@ -5,15 +5,15 @@
     button.close type="button" data-dismiss="modal"
       'x
   .modal-body
-  = form_for([:admin, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |school_form| 
+  = form_for([:admin, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |school_form|
 
       .modal-header
-        h3 =t("schools.edit")
+        h3 = t('school.edit')
       .modal-body
         .row-fluid
           #validation-errors
-        = render 'school_form_fields', :school_form => school_form   
+        = render 'school_form_fields', :school_form => school_form
         .row-fluid
           .span9
-            =submit_button t('schools.save'), :id => 'submit-admin-school-button', :class => 'btn btn-primary button span12'
+            =submit_button t('school.save'), :id => 'submit-admin-school-button', :class => 'btn btn-primary button span12'
           = link_to_cancel :id => 'cancel-admin-school-link'
