--- a/core/app/views/gaku/admin/schools/campuses/_campuses.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_campuses.html.slim
@@ -3,9 +3,9 @@
     #new-admin-school-campus.hide
     .pull-left
       h4.h4-vm.admin-school-campuses-count
-        = print_count(@school.campuses.count, t('campuses.list'))
+        = print_count(@school.campuses.count, t_campus_list)
     .pull-right
-      = ajax_link_to_new t('campuses.add'), new_admin_school_campus_path(@school), :id => 'new-admin-school-campus-link'
+      = ajax_link_to_new t('campus.add'), new_admin_school_campus_path(@school), :id => 'new-admin-school-campus-link'
 
   .row-fluid
     .span12
@@ -14,7 +14,7 @@
             tr
               th.btn-inverse style="width:28px"
                 i.icon-white.icon-home
-              th.btn-inverse =t 'campuses.name'
-              th.btn-info style="width:90px" =t 'manage'
+              th.btn-inverse = t('campus.name')
+              th.btn-info style="width:90px" = t('manage')
           tbody
             =render :partial => 'gaku/admin/schools/campuses/campus', :collection => @school.campuses, :as => 'campus'
