--- a/core/app/views/gaku/admin/schools/campuses/addresses/_addresses.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_addresses.html.slim
@@ -3,23 +3,23 @@
   .row-fluid
     .pull-left
       h4.h4-vm
-        = t('addresses.singular')
+        = t('address.singular')
     .pull-right
-      = ajax_link_to_new t('addresses.add'), new_admin_school_campus_address_path(@school, @campus), :id => 'new-admin-school-campus-address-link', :class => @campus.address.nil? ? "btn btn-primary" : 'btn btn-primary hide'
+      = ajax_link_to_new t('address.add'), new_admin_school_campus_address_path(@school, @campus), :id => 'new-admin-school-campus-address-link', :class => @campus.address.nil? ? "btn btn-primary" : 'btn btn-primary hide'
 
   .row-fluid
     .span12
       table#admin-school-campus-addresses-index.index.table.table-striped.table-bordered.table-condensed
           thead
             tr
-              th.btn-inverse =t 'addresses.title'
-              th.btn-inverse =t 'addresses.country'
-              th.btn-inverse =t 'addresses.zipcode'
-              th.btn-inverse =t 'addresses.state'
-              th.btn-inverse =t 'addresses.city'
-              th.btn-inverse =t 'addresses.address1'
-              th.btn-inverse =t 'addresses.address2'
-              th.btn-info style="width:61px" =t 'manage'
+              th.btn-inverse = t('address.title')
+              th.btn-inverse = t('address.country')
+              th.btn-inverse = t('address.zipcode')
+              th.btn-inverse = t('address.state')
+              th.btn-inverse = t('address.city')
+              th.btn-inverse = t('address.address1')
+              th.btn-inverse = t('address.address2')
+              th.btn-info style="width:61px" = t('manage')
           tbody
             =render :partial => 'gaku/admin/schools/campuses/addresses/address', :locals => {:address => @campus.address}
-br/   
+br/
