--- a/core/app/views/gaku/admin/schools/campuses/contacts/create.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/create.js.erb
@@ -1,17 +1,17 @@
 <%- if @contact.errors.any? %>
 	$('#new-admin-school-campus-contact-form-errors').html('<%= render_js_partial("gaku/shared/errors", {:target => @contact}) %>');
 <%- else %>
-  $('.admin-school-campus-contacts-count').html('<%= print_count(@campus.contacts.count, t("contacts.list")) %>');
+  $('.admin-school-campus-contacts-count').html('<%= print_count(@count+1, t_contact_list) %>');
 
   $('#admin-school-campus-contacts-index tbody').append('<%= render_js_partial("contact", {:contact => @contact}) %>');
-	
+
 	$("#new-admin-school-campus-contact-link").show();
 	$('#new-admin-school-campus-contact').slideToggle();
 	$("#new-admin-school-campus-contact form")[0].reset();
 	$('#new-admin-school-campus-contact-form-errors').slideToggle();
 
 	showNotice("<%= render_flash %>")
-	
+
 	<%- if @contact.is_primary? %>
 		$('.campus-contact').each(function() {
 			$(this).children('td.primary-contact').html('');
