--- a/core/app/views/gaku/admin/schools/create.js.erb
+++ b/core/app/views/gaku/admin/schools/create.js.erb
@@ -5,4 +5,4 @@ $('#new-admin-school-link').show();
 
 
 showNotice("<%= render_flash %>");
-$('.admin-schools-count').html('<%= print_count(@schools_count + 1, t("schools.list")) %>');
+$('.admin-schools-count').html('<%= print_count(@count+1, t_school_list) %>');
