--- a/core/app/views/gaku/admin/schools/_school_form_fields.html.slim
+++ b/core/app/views/gaku/admin/schools/_school_form_fields.html.slim
@@ -1,32 +1,32 @@
 .row-fluid.control-group
   .span12
-    = school_form.label :name, t("schools.name")
+    = school_form.label :name, t('school.name')
     = school_form.text_field :name, :class => "span12"
 .row-fluid.control-group
   .span12
-    = school_form.label :code, t('schools.code')
+    = school_form.label :code, t('school.code')
     = school_form.text_field :code, :class => "span12"
 .row-fluid.control-group
   .span12
-    = school_form.label :slogan, t("schools.slogan")
+    = school_form.label :slogan, t('school.slogan')
     = school_form.text_field :slogan, :class => "span12"
 .row-fluid.control-group
   .span12
-    = school_form.label :description, t("schools.description")
+    = school_form.label :description, t('school.description')
     = school_form.text_area :description, :class => "span12", :size => "0x3"
 .row-fluid.control-group
   .span12
-    = school_form.label :founded, t("schools.founded")
+    = school_form.label :founded, t('school.founded')
     = school_form.text_field :founded, :class => "span12"
 .row-fluid.control-group
   .span12
-    = school_form.label :principal, t("schools.principal")
+    = school_form.label :principal, t('school.principal')
     = school_form.text_field :principal, :class => "span12"
 .row-fluid.control-group
   .span12
-    = school_form.label :vice_principal, t("schools.vice_principal")
+    = school_form.label :vice_principal, t('school.vice_principal')
     = school_form.text_field :vice_principal, :class => "span12"
 .row-fluid.control-group
   .span12
-    = school_form.label :grades, t("schools.grades")
+    = school_form.label :grades, t('school.grades')
     = school_form.text_field :grades, :class => "span12"
