--- a/core/app/views/gaku/admin/schools/campuses/addresses/_address_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_address_modal.html.slim
@@ -1,10 +1,10 @@
 .modal.hide#edit-address-modal wmode="opaque"
-  = form_for [:admin, @school, @campus, @address], :remote => true, :html => { :'data-type' => 'script', :class => 'form-horizontal' } do |address_form| 
+  = form_for [:admin, @school, @campus, @address], :remote => true, :html => { :'data-type' => 'script', :class => 'form-horizontal' } do |address_form|
 
       .modal-header
         button.close type="button" data-dismiss="modal"
           'x
-        h3 =t("addresses.edit")
+        h3 = t('address.edit')
       .modal-body
         .row-fluid
           .validation-error
@@ -14,5 +14,5 @@
         = render 'shared/form_fields/address_form_fields', :address_form => address_form
         .row-fluid
           .span9
-            = submit_button t('addresses.save'), :id => 'submit-admin-school-campus-address-button'
+            = submit_button t('address.save'), :id => 'submit-admin-school-campus-address-button'
             = link_to_cancel :id => 'cancel-admin-school-campus-address-link'
