--- a/core/app/views/gaku/admin/schools/campuses/contacts/_contacts.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/_contacts.html.slim
@@ -3,9 +3,9 @@
     #new-admin-school-campus-contact.hide
     .pull-left
       h4.h4-vm.admin-school-campus-contacts-count
-        = print_count(@campus.contacts.count, t('contacts.list'))
+        = print_count(@campus.contacts.count, t('contact.list'))
     .pull-right
-        = ajax_link_to_new t('campuses.add_contact'), new_admin_school_campus_contact_path(@campus.school, @campus), :id => 'new-admin-school-campus-contact-link'
+        = ajax_link_to_new t('contact.add'), new_admin_school_campus_contact_path(@campus.school, @campus), :id => 'new-admin-school-campus-contact-link'
 
   .row-fluid
     table#admin-school-campus-contacts-index.index.table.table-striped.table-bordered.table-condensed
@@ -13,12 +13,12 @@
         tr
           th.btn-inverse style="width:28px; height:28px"
               i.icon-white.icon-home
-          th.btn-inverse =t('contact_type')
-          th.btn-inverse =t('contacts.data')
-          th.btn-inverse =t('contacts.details')
-          th.btn-inverse =t('contacts.emergency')
-          th.btn-info style='width:61px' =t 'manage'
+          th.btn-inverse = t('contact_type.singular')
+          th.btn-inverse = t('contact.data')
+          th.btn-inverse = t('contact.details')
+          th.btn-inverse = t('contact.emergency')
+          th.btn-info style='width:61px' = t('manage')
       tbody
         =render :partial => 'gaku/admin/schools/campuses/contacts/contact', :collection => @campus.contacts, :as => 'contact'
-    br/ 
+    br/
     #new-admin-school-campus-contact-form-errors
