--- a/core/app/views/gaku/admin/schools/campuses/contacts/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/_form.html.slim
@@ -1,14 +1,14 @@
 - model = @contact || Gaku::Contact.new
 = form_for [:admin, school, campus, model], :remote => true do |contact_form|
-  b= t('contacts.new')
-  .row-fluid.mt-l 
+  b= t('contact.new')
+  .row-fluid.mt-l
     .span12.well
       .span12.well
         = render 'gaku/shared/form_fields/contact_form_fields', :contact_form => contact_form
         .row-fluid
           .span12
             .span6
-              = submit_button t('contacts.save'), :id => 'submit-admin-school-campus-contact-button'
+              = submit_button t('contact.save'), :id => 'submit-admin-school-campus-contact-button'
             = link_to_cancel :id => 'cancel-admin-school-campus-contact-link'
 
 = javascript_include_tag 'gaku/admin/schools/campuses/contacts'
