--- a/core/app/views/gaku/admin/schools/campuses/create.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/create.js.erb
@@ -3,5 +3,5 @@ $('#admin-school-campuses-index tbody').append('<%= render_js_partial("campus", 
 $('#new-admin-school-campus').slideToggle();
 $('#new-admin-school-campus-link').show();
 
-$('.admin-school-campuses-count').html('<%= print_count(@school.campuses.count, t("campuses.list")) %>');
+$('.admin-school-campuses-count').html('<%= print_count(@count+1, t_campus_list) %>');
 showNotice("<%= render_flash %>");
