--- a/core/app/views/gaku/admin/schools/campuses/destroy.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/destroy.js.erb
@@ -1,2 +1,2 @@
-$('.admin-school-campuses-count').html('<%= print_count(@school.campuses.count, t("campuses.list")) %>');
+$('.admin-school-campuses-count').html('<%= print_count(@count-1, t_campus_list) %>');
 showNotice("<%= render_flash %>");
