--- a/core/app/views/gaku/admin/schools/destroy.js.erb
+++ b/core/app/views/gaku/admin/schools/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.admin-schools-count').html('<%= print_count(@schools_count - 1, t("schools.list")) %>');
+$('.admin-schools-count').html('<%= print_count(@count-1, t_school_list) %>');
