--- a/core/app/views/gaku/admin/schools/show.html.slim
+++ b/core/app/views/gaku/admin/schools/show.html.slim
@@ -13,10 +13,10 @@
     .span12.well
       -if params[:action] == 'school_details'
         span4
-          =link_to t('schools.edit_master'), admin_school_details_edit_path, :class => 'btn btn-danger span4', :confirm => t('confirm')
-      -else  
+          =link_to t('school.edit_master'), admin_school_details_edit_path, :class => 'btn btn-danger span4', :confirm => t('confirm')
+      -else
         -unless @school.is_primary
           .span4
-            = link_to_edit_with_text [:edit, :admin, @school], :class => "span12 btn btn-warning edit-link", :remote => true 
+            = link_to_edit_with_text [:edit, :admin, @school], :class => "span12 btn btn-warning edit-link", :remote => true
       .span4
         = link_to_back admin_schools_path, :class => "span12 btn"
