--- a/core/app/views/gaku/admin/contact_types/destroy.js.erb
+++ b/core/app/views/gaku/admin/contact_types/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.admin-contact-types-count').html('<%= print_count(@contact_types_count - 1, t("contact_types.list")) %>');
+$('.admin-contact-types-count').html('<%= print_count(@count-1, t_contact_type_list) %>');
