--- a/core/app/views/gaku/admin/contact_types/index.html.slim
+++ b/core/app/views/gaku/admin/contact_types/index.html.slim
@@ -4,14 +4,14 @@
   .row-fluid
     .pull-left
       h4.h4-vm.admin-contact-types-count
-        = print_count(@contact_types.count, t('contact_types.list'))
+        = print_count(@count, t_contact_type_list)
     .pull-right
-      =ajax_link_to_new t('contact_types.add'), new_admin_contact_type_path, :id => 'new-admin-contact-type-link'
+      =ajax_link_to_new t('contact_type.add'), new_admin_contact_type_path, :id => 'new-admin-contact-type-link'
   .row-fluid
     table#admin-contact-types-index.index.table.table-striped.table-bordered.table-condensed
       thead
         tr
-          th.btn-inverse =t('contact_types.singular')
+          th.btn-inverse = t('contact_type.singular')
           th.btn-info style="width:61px" =t('manage')
       tbody
         =render :partial => 'contact_type', :collection => @contact_types, :as => 'contact_type'
