--- a/core/app/views/gaku/class_groups/semesters/_form.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_form.html.slim
@@ -5,10 +5,10 @@
         /後でカレンダーにする
         .span6
           = f.label :starting, t("semesters.starting"), :class => "control-label"
-          = f.date_select :starting, :class => "span12"
+          = f.date_select :starting, :class => "span12", :order => [:year,:month,:day]
         .span6
           = f.label :ending, t("semesters.ending"), :class => "control-label"
-          = f.date_select :ending, :class => "span12"
+          = f.date_select :ending, :class => "span12", :order => [:year,:month,:day]
         = f.hidden_field :class_group_id, :value => @class_group.id
       .row-fluid.mt-s
         = submit_button t("semesters.save"), :id => 'submit-class-group-semester-button', :class => "span6 btn btn-primary"
