--- a/core/app/views/gaku/admin/enrollment_status_types/create.js.erb
+++ b/core/app/views/gaku/admin/enrollment_status_types/create.js.erb
@@ -3,5 +3,5 @@ $('#admin-enrollment-status-types-index tbody').append('<%= render_js_partial("e
 $('#new-admin-enrollment-status-type').slideToggle();
 $('#new-admin-enrollment-status-type-link').show();
 
-$('.admin-enrollment-status-types-count').html('<%= print_count(@enrollment_status_types_count + 1, t("enrollment_status_types.list")) %>');
+$('.admin-enrollment-status-types-count').html('<%= print_count(@count+1, t_enrollment_status_type_list) %>');
 showNotice("<%= render_flash %>");
