Refactored locales for admin/commute_method_types

--- a/core/app/views/gaku/admin/commute_method_types/create.js.erb
+++ b/core/app/views/gaku/admin/commute_method_types/create.js.erb
@@ -3,5 +3,5 @@ $('#admin-commute-method-types table tbody').append('<%= render_js_partial("comm
 $('#new-admin-commute-method-type').slideToggle()
 $('#new-admin-commute-method-type-link').show();
 
-$('.admin-commute-method-types-count').html('<%= print_count(@commute_method_types_count + 1, t("commute_method_types.list")) %>');
+$('.admin-commute-method-types-count').html('<%= print_count(@count+1, t_commute_method_type_list) %>');
 showNotice("<%= render_flash %>");
