--- a/core/app/views/gaku/admin/commute_method_types/_commute_method_type_modal.html.slim
+++ b/core/app/views/gaku/admin/commute_method_types/_commute_method_type_modal.html.slim
@@ -1,18 +1,18 @@
 #edit-commute-method-type-modal.modal.hide wmode="opaque"
 
-  = form_for([:admin, @commute_method_type], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |commute_method_type_form| 
+  = form_for([:admin, @commute_method_type], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |commute_method_type_form|
 
       .modal-header
         button type="button" class="close" data-dismiss="modal" ×
-        h3 =t("commute_method_types.edit")
+        h3 = t('commute_method_type.edit')
       .modal-body
         .row-fluid
           #validation-errors
         .row-fluid
-          = commute_method_type_form.label :name, t("name")
+          = commute_method_type_form.label :name, t('commute_method_type.name')
           = commute_method_type_form.text_field :name, :class => "span12"
-        br/    
+        br/
         .row-fluid
           .span9
-            = submit_button t('commute_method_types.save'), :id => 'submit-admin-commute-method-type-button'
+            = submit_button t('commute_method_type.save'), :id => 'submit-admin-commute-method-type-button'
           = link_to_cancel :id => 'cancel-admin-commute-method-type-link'
