--- a/core/app/views/gaku/admin/commute_method_types/index.html.slim
+++ b/core/app/views/gaku/admin/commute_method_types/index.html.slim
@@ -3,9 +3,9 @@
 	.row-fluid
 		.pull-left
 			h4.h4-vm.admin-commute-method-types-count
-				= print_count(@commute_method_types.count, t('commute_method_types.list'))	
+				= print_count(@count, t_commute_method_type_list)
 		.pull-right
-			=ajax_link_to_new t('commute_method_types.new'), new_admin_commute_method_type_path, :id => 'new-admin-commute-method-type-link'
+			=ajax_link_to_new t('commute_method_type.new'), new_admin_commute_method_type_path, :id => 'new-admin-commute-method-type-link'
 	.row-fluid
 		span12
 	.row-fluid
@@ -13,7 +13,7 @@
 			table#admin-commute-method-types-index.index.table.table-striped.table-bordered.table-condensed
 			  thead
 			    tr
-			      th.btn-inverse =t('commute_method_types.plural')
-			      th.btn-inverse style="width:61px" =t('manage')
+			      th.btn-inverse = t('commute_method_type.plural')
+			      th.btn-inverse style="width:61px" = t('manage')
 			    tbody
-			    	=render :partial => 'commute_method_type', :collection => @commute_method_types, :as => :commute_method_type 
+			    	=render :partial => 'commute_method_type', :collection => @commute_method_types, :as => :commute_method_type
