--- a/core/app/views/gaku/admin/disposals/attachments.html.slim
+++ b/core/app/views/gaku/admin/disposals/attachments.html.slim
@@ -3,17 +3,17 @@
     table.disposals-attachment-index.table.table-striped.table-bordered.table-condensed
       thead
         tr
-          th.btn-inverse =t('name')
-          th.btn-inverse =t('description')
-          th.btn-inverse =t('attachments.asset_type')
-          th.btn-inverse =t('attachments.file_name')
-          th.btn-inverse =t('attachments.file_type')
-          th.btn-inverse =t('attachments.file_size')
-          th.btn-info width="70px" =t 'manage'
+          th.btn-inverse = t('attachment.name')
+          th.btn-inverse = t('attachment.description')
+          th.btn-inverse = t('attachment.asset_type')
+          th.btn-inverse = t('attachment.file_name')
+          th.btn-inverse = t('attachment.file_type')
+          th.btn-inverse = t('attachment.file_size')
+          th.btn-info width="70px" = t('manage')
       tbody
         -@attachments.each do |attachment|
           tr
-            td =attachment.name 
+            td =attachment.name
             td =attachment.description
             td =attachment.attachable_type
             td =attachment.asset_file_name
@@ -23,4 +23,4 @@
               = link_to ("<i class='icon-white icon-repeat'></i>").html_safe, [:recovery, attachment], :class => 'mr-xs btn btn-mini btn-warning recovery-link', :remote => true, :style => 'margin-left:5px'
               = ajax_link_to_delete attachment , :id => 'delete-disposal-attachments-link'
 
-          
+
