--- a/core/app/assets/stylesheets/gaku/gakuengine.css.scss
+++ b/core/app/assets/stylesheets/gaku/gakuengine.css.scss
@@ -136,8 +136,44 @@ table.table{
 }
 .exam-parts {
   border: none;
+  border-radius: 0px;
   padding: 0px;
+    
+  thead:first-child tr:first-child th:last-child {
+    -webkit-border-top-right-radius: 0px;
+    border-top-right-radius: 0px;
+    -moz-border-radius-topright: 0px;
+  }
+  thead:first-child tr:first-child th:first-child {
+    border-left: 0px;
+    -webkit-border-top-left-radius: 0px;
+    border-top-left-radius: 0px;
+    -moz-border-radius-topleft: 0px;
+  }
+  thead {
+    tr {
+      th {
+        border-radius: 0px;
+      }
+    }
+  }
+  tbody {
+    tr {
+      height: 39px;
+      
+      td:first-child {
+        border-left: 0px;
+      }
+      td {
+        padding: 4px 5px;
+      }
+    }
+  }
 }
+.border-bottom {
+  border-bottom: 1px solid #dddddd;
+}
+
 
 span.required {
   color: $c_red;
