--- a/core/app/views/gaku/exams/destroy.js.erb
+++ b/core/app/views/gaku/exams/destroy.js.erb
@@ -1,2 +1,2 @@
-$('.exams-count').html('<%= print_count(@exams_count - 1, t("exams.list")) %>');
+$('.exams-count').html('<%= print_count(@count-1, t_exam_list) %>');
 showNotice("<%= render_flash %>");
