--- a/core/app/views/gaku/exams/new.html.slim
+++ b/core/app/views/gaku/exams/new.html.slim
@@ -3,7 +3,7 @@
   .span10
     .row-fluid
       .span12
-        h3= t('exams.new')
+        h3= t('exam.new')
     .row-fluid
       .span12
         hr/
