--- a/core/app/views/gaku/exams/_form.html.slim
+++ b/core/app/views/gaku/exams/_form.html.slim
@@ -9,31 +9,31 @@
           li= msg
   .row-fluid
     .row-fluid
-      h4 = t('exams.new_exam')
+      h4 = t('exam.new')
     .row-fluid
       hr
     .row-fluid
       .span12.well
         .row-fluid
           .span9
-            = f.label :name, t("exams.name")
+            = f.label :name, t('exam.name')
             = f.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
           .span3
-            = f.label :weight, t("exams.weight")
+            = f.label :weight, t('exam.weight')
             = f.number_field :weight, :class => "span12", "data-prompt-position" => "bottomRight:5"
         .row-fluid
           .span6
-            = f.label :description, t("exams.description")
+            = f.label :description, t('exam.description')
             = f.text_area :description, :class => "span12", :size => "0x2"
           .span6
-            = f.label :adjustments, t("exams.adjustments")
+            = f.label :adjustments, t('exam.adjustments')
             = f.text_area :adjustments, :class => "span12", :size => "0x2"
         .row-fluid
           .span12.form-inline
             = f.check_box :use_weighting
-            = f.label :use_weighting, t("exam_portions.use_weighting"), :class => "help-inline"
+            = f.label :use_weighting, t('exam_portion.use_weighting'), :class => "help-inline"
     .row-fluid
-      h4 = t('exam_portions.master')
+      h4 = t('exam_portion.master')
     .row-fluid
       hr
     .row-fluid
@@ -42,24 +42,24 @@
           .span12.well
             .row-fluid
               .span9
-                = ep_form.label :name, t('exam_portions.name')
-                = ep_form.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5", :value => t('exams.exam')
+                = ep_form.label :name, t('exam_portion.name')
+                = ep_form.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5", :value => t('exam.singular')
               .span3
-                = ep_form.label :weight, t('exam_portions.weight')
+                = ep_form.label :weight, t('exam_portion.weight')
                 = ep_form.number_field :weight, :class => "span12"
             .row-fluid
               .span6
-                = ep_form.label :problem_count, t('exam_portions.problem_count')
+                = ep_form.label :problem_count, t('exam_portion.problem_count')
                 = ep_form.number_field :problem_count, :class => "validate[required,custom[integer],min[0]] span12", "data-prompt-position" => "bottomRight:5"
               .span6
-                = ep_form.label :max_score, t('exam_portions.max_score')
+                = ep_form.label :max_score, t('exam_portion.max_score')
                 = ep_form.number_field :max_score, :class => "validate[required,custom[integer],min[0]] span12", "data-prompt-position" => "bottomRight:5"
             .row-fluid
               .span6
-                = ep_form.label :description, t('exam_portions.description')
+                = ep_form.label :description, t('exam_portion.description')
                 = ep_form.text_area :description, :class => "span12", :size => "0x2"
               .span6
-                = ep_form.label :adjustments, t('exam_portions.adjustments')
+                = ep_form.label :adjustments, t('exam_portion.adjustments')
                 = ep_form.text_area :adjustments, :class => "span12", :size => "0x2"
   .row-fluid.well
     / .span9
@@ -68,7 +68,7 @@
     /   =link_to_back exams_path ,:id => 'submit_button', :class => "span12 btn"
     .span12
       .span6
-        = submit_button t('exams.save'), :id => 'submit-exam-button'
+        = submit_button t('exam.save'), :id => 'submit-exam-button'
       = link_to_cancel :id => "cancel-exam-link"
 
 coffee:
