--- a/core/app/views/gaku/exams/create.js.erb
+++ b/core/app/views/gaku/exams/create.js.erb
@@ -1,5 +1,5 @@
 $('#exams-index tbody').append('<%= render_js_partial("exam", {:exam => @exam}) %>');
-$('.exams-count').html('<%= print_count(@exams_count + 1, t("exams.list")) %>');
+$('.exams-count').html('<%= print_count(@count+1, t_exam_list) %>');
 
 showNotice("<%= render_flash %>");
 $('#new-exam').slideToggle()
