--- a/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
@@ -6,10 +6,10 @@ showNotice("<%= render_flash %>");
 
 $('#exam-exam-portions-index tbody').append('<%= render_js_partial("gaku/exams/exam_portions/show", {:exam_portion => @exam.exam_portions.last}) %>');
 
-$('.exam-exam-portions-count').html("<%= t('exam_portions.list') + ' ( ' + @exam.exam_portions.count.to_s + ' )' %>");
+$('.exam-exam-portions-count').html("<%= print_count(@portions_count+1, t_exam_portion_list) %>");
 
 <% if @exam.use_weighting? %>
-  
+
   //if no portion added yet
   if($('.exam-portions-weight thead tr').length==0){
     $('.exam-portions-weight thead').append('<tr></tr>');
