--- a/core/app/views/gaku/exams/index.html.slim
+++ b/core/app/views/gaku/exams/index.html.slim
@@ -2,18 +2,18 @@
 .row-fluid
   .pull-left
     h4.h4-vm.exams-count
-      = print_count(@exams.count, t('exams.list'))
+      = print_count(@count, t_exam_list)
   .pull-right
-    =ajax_link_to_new t('exams.add'), new_exam_path, :id => 'new-exam-link'
+    =ajax_link_to_new t('exam.add'), new_exam_path, :id => 'new-exam-link'
 .row-fluid
   .span12.well
     table#exams-index.index.table.table-striped.table-bordered.table-condensed
 	    thead
-		    tr	
-		    	th class='btn-inverse' Exam name
-		    	th class='btn-inverse' Adjustment
-		    	th class='btn-inverse' Weight
-		    	th class='btn-inverse' Use weighting
-		    	th class='btn-info' Options
+		    tr
+		    	th class='btn-inverse' = t('exam.name')
+		    	th class='btn-inverse' = t('exam.adjustments')
+		    	th class='btn-inverse' = t('exam.weight')
+		    	th class='btn-inverse' = t('exam.use_weighting')
+		    	th class='btn-info' = t('exam.options')
 			tbody
 				=render :partial => 'gaku/exams/exam',  :as => :exam, :collection => @exams
