--- a/core/app/views/gaku/students/destroy.js.erb
+++ b/core/app/views/gaku/students/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.students-count').html('<%= print_count(@count-1, t_students_list) %>');
+$('.students-count').html('<%= print_count(@count-1, t_student_list) %>');
