--- a/core/app/views/gaku/students/_showtable.html.slim
+++ b/core/app/views/gaku/students/_showtable.html.slim
@@ -33,6 +33,6 @@
 row-fluid
   .span12
     #delete-student
-      =ajax_link_to_delete "#", :id => 'delete-student-link', :class => 'btn btn-danger pull-right'
+      =link_to_modal_delete nil, :id => 'delete-student-link', :class => 'btn btn-danger pull-right', :data => {:confirm => nil}
   .delete_modal
     =render 'gaku/shared/delete_modal', :target => @student
