--- a/core/app/views/gaku/class_groups/semesters/_form.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_form.html.slim
@@ -1,12 +1,12 @@
 = form_for [@class_group, @semester], { :remote => true } do |f|
   .row-fluid.mt-l
-    .span12.well 
+    .span12.well
       .row-fluid
         .span6
-          = f.label :starting, t("semesters.starting"), :class => "control-label"
+          = f.label :starting, t('semester.starting'), :class => "control-label"
           = f.date_select :starting, :class => "span12", :order => [:year,:month,:day]
         .span6
-          = f.label :ending, t("semesters.ending"), :class => "control-label"
+          = f.label :ending, t('semester.ending'), :class => "control-label"
           = f.date_select :ending, :class => "span12", :order => [:year,:month,:day]
         = f.hidden_field :class_group_id, :value => @class_group.id
       .row-fluid.mt-s
