--- a/core/app/views/gaku/students/_student_form_fields.html.slim
+++ b/core/app/views/gaku/students/_student_form_fields.html.slim
@@ -1,7 +1,7 @@
 .row-fluid
   .span6
-    = form.label :class_group_id, t("class"), :class => "control-label"
-    = form.collection_select :class_group_ids, @class_groups, :id, :name, {:prompt => t('students.no_class_group')}, {:class => 'span12'}
+    = form.label :class_group_id, t('class'), :class => "control-label"
+    = form.collection_select :class_group_ids, @class_groups, :id, :name, {:prompt => t('notice.no_resource_assign_first', :resource => t('class_group.singular'))}, {:class => 'span12'}
 
 .row-fluid
   .span6
