--- a/core/app/assets/stylesheets/gaku/gakuengine.css.scss
+++ b/core/app/assets/stylesheets/gaku/gakuengine.css.scss
@@ -174,6 +174,10 @@ table.table{
 .border-bottom {
   border-bottom: 1px solid #dddddd;
 }
+.icon-chair {
+  background-image: url("/assets/icon-chair.png");
+  background-position: 0px;
+}
 
 
 span.required {
