--- a/core/app/views/gaku/students/_showtable.html.slim
+++ b/core/app/views/gaku/students/_showtable.html.slim
@@ -5,7 +5,7 @@
 
     .span3.well
       .row-fluid.pagination-centered
-        h4 =t(:picture)
+        h4 = t('picture')
       .row-fluid.mt-s
         .span12.pagination-centered
           = image_tag @student.picture.url(:thumb), :id => "student-picture"
@@ -24,7 +24,7 @@
 .row-fluid
   .span12.well
     .span4
-      = link_to t("enroll_to_class"), new_student_class_group_enrollment_path(@student), { :id => 'enroll-student-link', :class => "span12 btn btn-primary", :remote => true }
+      = link_to t('enroll_to_class'), new_student_class_group_enrollment_path(@student), { :id => 'enroll-student-link', :class => "span12 btn btn-primary", :remote => true }
     .span4
       = link_to_edit_with_text [:edit, @student], :class => "span12 btn btn-warning edit-link", :remote => true
     .span4
