fix student chooser id-s and datatable js

--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -40,7 +40,7 @@
           = submit_tag t('course_enrollment.add'), :class => 'btn btn-primary'
 .row-fluid
   .span12.well
-    #students-index
+    #students-index-div
       =render 'gaku/students/students'
 = javascript_include_tag "gaku/student_chooser"
 
