--- a/core/app/views/gaku/students/_students.html.slim
+++ b/core/app/views/gaku/students/_students.html.slim
@@ -1,4 +1,4 @@
-table#students-index-table.index.table.table-striped.table-bordered.table-condensed.tablesorter
+table#students-index.index.table.table-striped.table-bordered.table-condensed.tablesorter
   thead
     tr
       th.btn-inverse style="width:24px;"
