--- a/admissions/app/views/gaku/admin/admissions/_student_chooser.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_chooser.html.slim
@@ -15,7 +15,7 @@
     
 .row-fluid
   .span12.well style="margin-bottom:0px"
-    /#students-index
+    #students-index-div
       =render 'gaku/students/students'
     - admission_phase_states.each_with_index do |state, index|
       .span6 *{:id => "state" + state.id.to_s, :style => ("margin-left:0;" if index%2 == 0)}
