--- a/core/app/assets/stylesheets/gaku/gaku_core.css
+++ b/core/app/assets/stylesheets/gaku/gaku_core.css
@@ -6,6 +6,6 @@
  *= require gaku/tbs_datepicker/css/datepicker
  *= require gaku/jquery_validation_engine/validationEngine.jquery.css
  * require chosen
- *= require gaku/jquery.dataTables.css
+ * require gaku/jquery.dataTables.css
  *= require gaku/devise/sessions.css
 */
