--- a/core/app/assets/stylesheets/gaku/gaku_core.css
+++ b/core/app/assets/stylesheets/gaku/gaku_core.css
@@ -1,12 +1,12 @@
 /*
  *= require_self
- *= require gaku/bootstrap
- *= require gaku/bootstrap-responsive
- *= require gaku/gaku_engine.css.scss
- *= require gaku/tbs_datepicker/css/datepicker
- *= require gaku/jquery_validation_engine/validationEngine.jquery.css
+ *= require bootstrap
+ *= require bootstrap-responsive
+ *= require tbs_datepicker/css/datepicker
+ *= require jquery_validation_engine/validationEngine.jquery
+ * require jquery.dataTables
  * require chosen
- * require gaku/jquery.dataTables.css
- *= require gaku/devise/sessions.css
- *= require gaku/courses
+
+ *= require ./gaku_engine
+ *= require ./devise/sessions
 */
