WIP : Going production

--- a/core/app/views/gaku/admin/enrollment_status_types/_form.html.slim
+++ b/core/app/views/gaku/admin/enrollment_status_types/_form.html.slim
@@ -14,4 +14,4 @@
                 =submit_button t('enrollment_status_type.save'), :id => 'submit-admin-enrollment-status-type-button'
               = link_to_cancel :id => 'cancel-admin-enrollment-status-type-link'
 
-= javascript_include_tag 'gaku/admin/enrollment_status_types'
+/= javascript_include_tag 'gaku/admin/enrollment_status_types'
