--- a/core/app/views/gaku/admin/schools/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/_form.html.slim
@@ -12,4 +12,4 @@
                 = submit_button t('school.save'), :id => 'submit-admin-school-button'
               = link_to_cancel :id => 'cancel-admin-school-link'
 
-= javascript_include_tag 'gaku/admin/schools'
+/= javascript_include_tag 'gaku/admin/schools'
