--- a/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
@@ -10,5 +10,5 @@
               = submit_button t('address.save'), :id => 'submit-admin-school-campus-address-button'
             = link_to_cancel :id => 'cancel-admin-school-campus-address-link'
 
-= javascript_include_tag 'gaku/shared/address'
-= javascript_include_tag 'gaku/admin/schools/campuses/addresses'
+/= javascript_include_tag 'gaku/shared/address'
+/= javascript_include_tag 'gaku/admin/schools/campuses/addresses'
