--- a/core/app/views/gaku/admin/schools/campuses/contacts/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/_form.html.slim
@@ -11,4 +11,4 @@
               = submit_button t('contact.save'), :id => 'submit-admin-school-campus-contact-button'
             = link_to_cancel :id => 'cancel-admin-school-campus-contact-link'
 
-= javascript_include_tag 'gaku/admin/schools/campuses/contacts'
+/= javascript_include_tag 'gaku/admin/schools/campuses/contacts'
