--- a/core/app/views/gaku/class_groups/_form.html.slim
+++ b/core/app/views/gaku/class_groups/_form.html.slim
@@ -28,4 +28,4 @@
             = submit_button t('class_group.save'), :id => 'submit-class-group-button'
           = link_to_cancel :id => "cancel-class-group-link"
 
-= javascript_include_tag 'gaku/class_groups'
+/= javascript_include_tag 'gaku/class_groups'
