--- a/core/app/views/gaku/class_groups/semesters/_form.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_form.html.slim
@@ -13,4 +13,4 @@
         = submit_button t('semester.save'), :id => 'submit-class-group-semester-button', :class => "span6 btn btn-primary"
         = link_to_cancel  :id => "cancel-class-group-semester-link",:style => "min-height:0px"
 
-= javascript_include_tag 'gaku/class_groups/semesters'
+/= javascript_include_tag 'gaku/class_groups/semesters'
