--- a/core/app/views/gaku/notes/_form.html.slim
+++ b/core/app/views/gaku/notes/_form.html.slim
@@ -14,5 +14,5 @@
 
 javascript:
   window.notable_resource = '#{@notable_resource}';
-            
-= javascript_include_tag 'gaku/notes'
+
+/= javascript_include_tag 'gaku/notes'
