--- a/core/app/views/gaku/students/course_enrollments/_form.html.slim
+++ b/core/app/views/gaku/students/course_enrollments/_form.html.slim
@@ -12,4 +12,4 @@
             = submit_button t('course_enrollment.create'), :id => 'submit-student-course-enrollment-button'
           = link_to_cancel :id => "cancel-student-course-enrollment-link"
 
-= javascript_include_tag 'gaku/students/course_enrollments'
+/= javascript_include_tag 'gaku/students/course_enrollments'
