--- a/core/app/views/gaku/students/guardians/contacts/_form.html.slim
+++ b/core/app/views/gaku/students/guardians/contacts/_form.html.slim
@@ -1,6 +1,6 @@
 =form_for [@student, @guardian, @contact], :remote => true do |contact_form|
   b= t('contact.new')
-  .row-fluid.mt-l 
+  .row-fluid.mt-l
     .span12.well
       = render 'gaku/shared/form_fields/contact_form_fields', :contact_form => contact_form
       .row-fluid
@@ -8,5 +8,5 @@
           .span6
             = submit_button t('contact.save'), :id => 'submit-student-guardian-contact-button'
           = link_to_cancel  :id => 'cancel-student-guardian-contact-link'
-          
-= javascript_include_tag 'gaku/students/guardians/contacts'
+
+/= javascript_include_tag 'gaku/students/guardians/contacts'
