--- a/core/app/views/gaku/students/show.html.slim
+++ b/core/app/views/gaku/students/show.html.slim
@@ -12,4 +12,4 @@
         .span12
           = render 'gaku/students/showtable'
 
-  = javascript_include_tag "gaku/students/show"
+  /= javascript_include_tag "gaku/students/show"
