--- a/core/app/views/gaku/syllabuses/index.html.slim
+++ b/core/app/views/gaku/syllabuses/index.html.slim
@@ -6,12 +6,12 @@
           h4.mt-xs.mb-0.syllabuses-count
             = print_count(@count, t_syllabus_list)
       .pull-right
-        = link_to_new t('syllabus.new'), '', :id => "new-syllabus-link"
+        = ajax_link_to_new t('syllabus.new'), new_syllabus_path, :id => "new-syllabus-link"
     .row-fluid
       .span12
         hr/
-      #new-syllabus.hide
-        =render 'form'
+      #new-syllabus
+        /=render 'form'
     .row-fluid
       .span12.well
         =render 'gaku/syllabuses/syllabuses'
