--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -48,7 +48,7 @@
   .span12.well
     #students-index-div
       =render 'gaku/students/students'
-= javascript_include_tag "gaku/student_chooser"
+/= javascript_include_tag "gaku/student_chooser"
 
 
 javascript:
