--- a/core/app/views/gaku/students/addresses/_form.html.slim
+++ b/core/app/views/gaku/students/addresses/_form.html.slim
@@ -3,13 +3,13 @@
     b= t('address.new')
     .row-fluid.mt-l
       .span12.well
-        = render 'gaku/shared/form_fields/address_form_fields',  :address_form => address_form 
-        
+        = render 'gaku/shared/form_fields/address_form_fields',  :address_form => address_form
+
         .row-fluid
           .span12
             .span6
               = submit_button t('address.save'), :id => 'submit-student-address-button'
             = link_to_cancel :id => 'cancel-student-address-link'
-  
-= javascript_include_tag 'gaku/students/addresses'
-= javascript_include_tag 'gaku/shared/address'
+
+/= javascript_include_tag 'gaku/students/addresses'
+/= javascript_include_tag 'gaku/shared/address'
