--- a/core/app/views/gaku/students/guardians/_form.html.slim
+++ b/core/app/views/gaku/students/guardians/_form.html.slim
@@ -4,11 +4,11 @@
       .row-fluid.mt-l
         .span12.well
           = render 'gaku/shared/form_fields/guardian_form_fields', :guardian_form => guardian_form
-            
+
           .row-fluid
             .span12
               .span6
                 = submit_button t('guardian.save'), :id => 'submit-student-guardian-button'
               =link_to_cancel :id => "cancel-student-guardian-link"
 
-= javascript_include_tag 'gaku/students/guardians'
+/= javascript_include_tag 'gaku/students/guardians'
