--- a/core/app/views/gaku/students/guardians/addresses/_form.html.slim
+++ b/core/app/views/gaku/students/guardians/addresses/_form.html.slim
@@ -3,12 +3,12 @@
     b= t('address.new')
     .row-fluid.mt-l
       .span12.well
-        = render 'gaku/shared/form_fields/address_form_fields', :address_form => address_form 
+        = render 'gaku/shared/form_fields/address_form_fields', :address_form => address_form
         .row-fluid
           .span12
             .span6
               = submit_button t('address.save'), :id => 'submit-student-guardian-address-button'
             = link_to_cancel :id => 'cancel-student-guardian-address-link'
-  
-= javascript_include_tag 'gaku/students/guardians/addresses'
-= javascript_include_tag 'gaku/shared/address'
+
+/= javascript_include_tag 'gaku/students/guardians/addresses'
+/= javascript_include_tag 'gaku/shared/address'
