[views] class group fix for cancel button

--- a/core/app/views/gaku/class_groups/index.html.slim
+++ b/core/app/views/gaku/class_groups/index.html.slim
@@ -3,6 +3,7 @@
   .span10
     .row-fluid
       #new-class-group.hide
+        =render 'form'
       .pull-left 
         h4.mt-xs.mb-0.class-groups-count 
           = print_count(@count, t_class_group_list)
