fix admission forms and links ids

--- a/admissions/app/views/gaku/admin/admissions/_form.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_form.html.slim
@@ -24,5 +24,5 @@
       .row-fluid
         .span12
           .span6
-            = submit_button t('student.create'), :id => 'submit-student-button'
-          = link_to_cancel :id => 'cancel-student-link'
+            = submit_button t('student.create'), :id => 'submit-admin-admission-button'
+          = link_to_cancel :id => 'cancel-admin-admission-link'
