[views] refactored syllabuses new form loading

--- a/core/app/views/gaku/syllabuses/index.html.slim
+++ b/core/app/views/gaku/syllabuses/index.html.slim
@@ -10,8 +10,8 @@
     .row-fluid
       .span12
         hr/
-      #new-syllabus
-        /=render 'form'
+      #new-syllabus.hide
+        =render 'form'
     .row-fluid
       .span12.well
         =render 'gaku/syllabuses/syllabuses'
