[views|controller] fixed commute method types form for new record loading

--- a/core/app/views/gaku/admin/commute_method_types/new.js.erb
+++ b/core/app/views/gaku/admin/commute_method_types/new.js.erb
@@ -1,2 +1,2 @@
-$('#new-admin-commute-method-type').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-admin-commute-method-type').slideDown();
 $('#new-admin-commute-method-type-link').hide();
