--- a/core/app/views/gaku/admin/commute_method_types/index.html.slim
+++ b/core/app/views/gaku/admin/commute_method_types/index.html.slim
@@ -1,5 +1,6 @@
 #admin-commute-method-types
 	#new-admin-commute-method-type.hide
+		=render('form')
 	.row-fluid
 		.pull-left
 			h4.h4-vm.admin-commute-method-types-count
