[views] refactored the new form loading on contact type

--- a/core/app/views/gaku/admin/contact_types/index.html.slim
+++ b/core/app/views/gaku/admin/contact_types/index.html.slim
@@ -1,6 +1,7 @@
 /= Rails.application.assets['application.js'].dependencies
 #admin-contact-types
   #new-admin-contact-type.hide
+    =render 'form'
   .row-fluid
     .pull-left
       h4.h4-vm.admin-contact-types-count
