--- a/core/app/views/gaku/admin/contact_types/new.js.erb
+++ b/core/app/views/gaku/admin/contact_types/new.js.erb
@@ -1,2 +1,2 @@
-$('#new-admin-contact-type').html('<%= render_js_partial("form") %>').slideDown()
+$('#new-admin-contact-type').slideDown()
 $('#new-admin-contact-type-link').hide();
