--- a/core/app/views/gaku/class_groups/new.js.erb
+++ b/core/app/views/gaku/class_groups/new.js.erb
@@ -1,3 +1,3 @@
 $('#new-class-group').html('<%= render_js_partial("form") %>').slideDown();
 $('#new-class-group-link').hide();
-$('form').enableClientSideValidations();
+$('.form').enableValidations();
